# superscalerai

./: .env.example  .gitignore  LANDING_COPY.md  README.md  SPEC.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: billing.py  credits.py  deps.py  download.py  images.py  jobs.py  ratelimit.py
app/auth/: router.py  service.py
app/core/: config.py
app/database/: migrate.py  models.py  session.py
app/jobs/: queue.py
app/pipeline/: analysis.py  base.py  context.py  engine.py  factory.py  presets.py
app/pipeline/stages/: __init__.py  analyzer.py  captioner.py  exporter.py  generative_upscaler.py  local_enhancers.py  (+3 more)
app/providers/: base.py  replicate.py
app/services/: billing.py  credits.py  email.py  ratelimit.py  storage.py
app/web/: router.py
app/workers/: enhance.py
migrations/: env.py
migrations/versions/: 4f2ee29bcb05_job_options.py  940811ab8cbc_password_resets.py  b291db830a4e_user_plan_pending.py  ba8e44d4e287_user_plan_cancels_at.py  c81848f6a4f9_initial_schema.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_auth.py  test_billing.py  test_color_match.py  test_credits.py  test_db_url.py  test_image_delete.py  test_job_options.py  test_local_enhancers.py  test_migrations.py  test_ocr_regions.py  test_password_reset.py  test_pipeline.py  test_post_sharpen.py  test_preprocessor.py  test_ratelimit.py  test_storage.py  test_web.py  test_worker_concurrency.py
validation/: ab_progressive.py  calibrate.py  calibrate_faces.py  calibrate_faces_report.py  calibrate_report.py  ocr_probe.py  validate.py
(+9 files in other folders)
